--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-    "name": "hux-blog",
-    "title": "Hux Blog",
-    "author": "Hux <huxpro@gmail.com>",
-    "version": "1.6.0",
-    "homepage": "http://huxpro.github.io",
+    "name": "Lambert's",
+    "title": "Lambert's",
+    "author": "Lambert <lambert19900603@gmail.com>",
+    "version": "1.0.0",
+    "homepage": "http://lambert19900603.github.io",
     "repository": {
         "type": "git",
-        "url": "https://github.com/Huxpro/huxpro.github.io"
+        "url": "https://github.com/lambert19900603/lambert19900603.github.io"
     },
-    "bugs": "https://github.com/Huxpro/huxpro.github.io/issues",
+    "bugs": "https://github.com/lambert19900603/lambert19900603.github.io/issues",
     "devDependencies": {
         "grunt": "~0.4.5",
         "grunt-contrib-less": "~0.11.4",
