--- a/_config.yml
+++ b/_config.yml
@@ -1,47 +1,44 @@
 # Site settings
-title: Lambert's
-SEOTitle: Lambert's Blog
-header-img: 'img/bg-1.jpg'
-author: Lambert Bao
-email: lambert19900603@gmail.com
+title:       Lambert's
+SEOTitle:    Lambert's Blog
+header_img:  img/bg-1.jpg
+author:      Lambert Bao
+email:       lambert19900603@gmail.com
 description: "鲍凌波 @lambert 的博客 ｜ 伪前端爱好者 ｜ 伪健身爱好者 ｜ 伪动漫宅 ｜ 伪高达爱好者 ｜ 伪银行从业者。"
-keyword: "鲍凌波, Lambert, Blog, 博客, 个人网站"
-url: lambert19900603@github.io              # your host, for absolute URL
-baseurl: ''                             # for example, '/blog' if your blog hosted on 'host/blog'
+keyword:     "鲍凌波, Lambert, Blog, 博客, 个人网站"
+url:         lambert19900603@github.io              # your host, for absolute URL
+baseurl:     ''                             # for example, '/blog' if your blog hosted on 'host/blog'
 
 
 # Rake settings
-default_header_img: 'img/bg-1.jpg'
-post_path: _posts
-layout_path: _layouts
-post_ext: md
+default_header_img: img/bg-1.jpg
+post_path:          _posts
+layout_path:        _layouts
+post_ext:           md
 
 
 # SNS settings
-RSS: false
-weibo_username: lambert19900603
-zhihu_username: lambert19900603
+RSS:             false
+weibo_username:  lambert19900603
+zhihu_username:  lambert19900603
 github_username: lambert19900603
 # twitter_username:  
 # facebook_username:  
 # linkedin_username:  firstname-lastname-idxxxx
 
 
-
 # Build settings
 # from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
 highlighter: rouge
-permalink: pretty
-paginate: 10
-exclude: ["less","node_modules","Gruntfile.js","package.json","README.md","README.zh.md"]
-anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
-
+permalink:   pretty
+paginate:    10
+exclude:     ["less","node_modules","Gruntfile.js","package.json","README.md","README.zh.md"]
+anchorjs:    true                          # if you want to customize anchor. check out line:181 of `post.html`
 
 
 # Gems
 # from PR#40, to support local preview for Jekyll 3.0
 gems: [jekyll-paginate]
-
 
 
 # Markdown settings
@@ -50,19 +47,17 @@ gems: [jekyll-paginate]
 # document: http://jekyllrb.com/docs/configuration/#kramdown
 markdown: kramdown
 kramdown:
-  input: GFM                            # use Github Flavored Markdown !important
-
+  input:  GFM                            # use Github Flavored Markdown !important
 
 
 # Disqus settings
 #disqus_username: _your_disqus_short_name_
 
+
 # Duoshuo settings
 # duoshuo_username: 
 # Share component is depend on Comment so we can NOT use share only.
 # duoshuo_share: true                     # set to false if you want to use Comment without Sharing
-
-
 
 
 # Analytics settings
@@ -73,48 +68,48 @@ kramdown:
 # ga_domain: huangxuan.me
 
 
-
 # Sidebar settings
-sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "一个一心要过小资生活的屌丝青年"
-sidebar-avatar: /img/avatar.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
-
+sidebar:                   true                           # whether or not using Sidebar.
+sidebar_about_description: "一个一心要过小资生活的屌丝青年"
+sidebar_avatar:            /img/avatar.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 # Featured Tags
-featured-tags: true                     # whether or not using Feature-Tags
-featured-condition-size: 1              # A tag will be featured if the size of it is more than this condition value
-
+featured_tags:           true                     # whether or not using Feature-Tags
+featured_condition_size: 0              # A tag will be featured if the size of it is more than this condition value
 
 
 # Friends
 friends: [
-    # {
-    #     title: "前端外刊评论",
-    #     href: "http://qianduan.guru/"
-    # },{
-    #     title: "天镶的博客",
-    #     href: "http://lingyu.wang/"
-    # },{
-    #     title: "Luke的自留地",
-    #     href: "http://hmqk1995.github.io"
-    # },{
-    #     title: "Ebn's Blog",
-    #     href: "http://ebnbin.com/"
-    # },{
-    #     title: "SmdCn's Blog",
-    #     href: "http://blog.smdcn.net"
-    # },{
-    #     title: "解旻的博客",
-    #     href: "http://xieminis.me/"
-    # },{
-    #     title: "DHong Say",
-    #     href: "http://dhong.co"
-    # },{
-    #     title: "尹峰以为",
-    #     href: "http://ingf.github.io/"
-    # },{
-    #     title: "前端神盾局",
-    #     href: "http://wepiaofei.github.io/blog/"
-    # }
+    {
+        title: "Hux Blog",
+        href: "http://huangxuan.me/"
+    },{
+        title: "前端外刊评论",
+        href: "http://qianduan.guru/"
+    },{
+        title: "天镶的博客",
+        href: "http://lingyu.wang/"
+    },{
+        title: "Luke的自留地",
+        href: "http://hmqk1995.github.io"
+    },{
+        title: "Ebn's Blog",
+        href: "http://ebnbin.com/"
+    },{
+        title: "SmdCn's Blog",
+        href: "http://blog.smdcn.net"
+    },{
+        title: "解旻的博客",
+        href: "http://xieminis.me/"
+    },{
+        title: "DHong Say",
+        href: "http://dhong.co"
+    },{
+        title: "尹峰以为",
+        href: "http://ingf.github.io/"
+    },{
+        title: "前端神盾局",
+        href: "http://wepiaofei.github.io/blog/"
+    }
 ]
